[tool.poetry]
name = "커뮤니티 글쓰기 매크로"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
undetected-chromedriver = "^3.1.5.post4"
chromedriver-autoinstaller = "^0.4.0"
cryptography = "^38.0.1"
sklearn = "^0.0.post1"
opencv-python = "3.4.10.37"
matplotlib = "3.5"
selenium-stealth = "^1.0.6"
keras-nightly = "2.5.0.dev2021032900"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
